testcases/error/unclose_comment.cpp
int a; /* this is comment

